--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build-dev": "webpack --mode=development",
     "package-dev": "tfx extension create --manifest-globs azure-devops-extension.json --overrides-file azure-devops-extension-dev.json",
-    "serve-dev": "webpack serve --cert localhost.crt --key localhost.key",
+    "serve-dev": "webpack serve",
     "watch": "webpack --watch",
     "build": "webpack --mode=production",
     "postbuild": "npm run package",
@@ -23,41 +23,44 @@
   "author": "Richard Goforth",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "azure-devops-extension-api": "^1.158.0",
     "azure-devops-extension-sdk": "^2.0.11",
-    "azure-devops-ui": "^2.167.2",
+    "azure-devops-ui": "^2.167.22",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^4.3.1"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^16.14.20",
+    "@types/react-dom": "^16.9.12",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
+    "azure-devops-node-api": "^11.0.1",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^5.1.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
-    "prettier": "^2.2.1",
+    "jszip": "^3.7.1",
+    "prettier": "^2.4.1",
     "source-map-loader": "^1.1.3",
     "style-loader": "^2.0.0",
-    "tfx-cli": "^0.9.2",
+    "tfx-cli": "^0.9.3",
     "ts-loader": "^6.0.2",
     "typescript": "^3.5.2",
     "typescript-styled-plugin": "^0.18.0",
-    "underscore": "^1.12.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "underscore": "^1.13.1",
+    "validator": "^13.7.0",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
   }
 }
